syntax = "proto3";
package identities.transactions.issue;

message TransactionResponse {
  string identity_id = 1;
}