syntax = "proto3";
package assetmantle.modules.identities.transactions.quash;

import "ids/base/identity_id.proto";

message Message {
  string from = 1;
  assetmantle.schema.ids.base.IdentityID from_i_d = 2;
  assetmantle.schema.ids.base.IdentityID identity_i_d = 3;
}